Fixes the gap caused by the h1 margin overflowing the .main container

--- a/public/styles/site/_component-content-area.scss
+++ b/public/styles/site/_component-content-area.scss
@@ -1,3 +1,7 @@
+.main {
+	padding-top: 1px;
+}
+
 .content {
 	color: $main-content-color;
 }
